导航栏的开启与关闭

--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -54,6 +54,7 @@
     z-index: 2000;
     box-shadow: 0 2px 4px rgba(2, 15, 29, 0.904);
     transition: 0.3s ease-in-out;
+    display: none;
   }
   .header .navBar .navLists {
     flex-direction: column;
@@ -87,6 +88,9 @@
   }
   .header .navBar .closeNavbar:hover {
     color: var(--SecondaryColor);
+  }
+  .header .showNavbar {
+    display: block;
   }
 }
 .header .toggleNavbar .icon {
