--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -70,5 +70,61 @@
         font-size: 1.8rem;
       }
     }
+
+    .cardDiv {
+      position: relative;
+      padding: 2rem 1rem;
+      background: var(--whiteColor);
+      border-radius: 10px;
+      gap: 1rem;
+
+      label {
+        display: block;
+        color: var(--textColor);
+        padding-bottom: 10px;
+        font-size: 13px;
+        font-weight: 500;
+      }
+
+      .label_total {
+        justify-content: space-between;
+        align-items: center;
+
+        .total {
+          color: var(--textColor);
+          font-size: 18px;
+          padding-bottom: 10px;
+        }
+      }
+
+      .input {
+        height: 40px;
+        padding: 0 1rem;
+        background: var(--inputColor);
+        border-radius: 3rem;
+
+        input {
+          background: none;
+          border: none;
+          outline: none;
+          width: 100%;
+          font-size: 13px;
+          font-weight: 500;
+          &::placeholder {
+            font-size: 13px;
+          }
+        }
+
+        .icon {
+          font-size: 18px;
+          color: var(--PrimaryColor) !important;
+          margin-left: 10px;
+        }
+        /*横条样式*/
+        input[type="range"] {
+          background: blue;
+        }
+      }
+    }
   }
 }
