HomeFooter的构建及样式(Home告一段落 开始Main)

--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -71,6 +71,7 @@
       }
     }
 
+    //
     .cardDiv {
       position: relative;
       padding: 2rem 1rem;
@@ -152,5 +153,23 @@
         }
       }
     }
+
+    .homeFooterIcons {
+      width: 100%;
+      justify-content: space-between;
+
+      .icon {
+        font-size: 20px;
+        margin: 0 5px;
+        color: var(--whiteColor);
+        font-weight: 600;
+
+        &:hover {
+          color: var(--PrimaryColor);
+        }
+      }
+    }
   }
 }
+
+// media query================================>
