全页面添加Aos动画

--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -120,10 +120,7 @@
         color: var(--SecondaryColor);
       }
     }
-
-    // &:hover {
-    //   //   color: var(--SecondaryColor);
-    //   color: red;
-    // }
   }
 }
+
+// MEDIA QUERY =========================>
