--- a/src/Components/Footer/footer.scss
+++ b/src/Components/Footer/footer.scss
@@ -26,8 +26,7 @@
   margin: auto;
 
   .videoDiv {
-    // 自选项
-    // width: 100%;
+    width: 100%;
     position: absolute;
     height: 100%;
 
@@ -213,6 +212,120 @@
         small {
           font-size: 10px;
           color: var(--whiteColor);
+        }
+      }
+    }
+  }
+}
+
+// MEDIA QUERY ================================>
+@media screen and (min-width: 500px) {
+  .footer {
+    .secContent {
+      .footerCard {
+        .footerLinks {
+          grid-template-columns: repeat(3, 1fr);
+          padding-bottom: 1rem;
+        }
+
+        // 版权区域
+        .footerDiv {
+          flex-direction: row;
+          justify-content: space-between;
+
+          small {
+            font-size: 12px;
+            color: var(--whiteColor);
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 660px) {
+  .footer {
+    .secContent {
+      .contactDiv {
+        flex-direction: row;
+        justify-content: space-between;
+
+        .inputDiv {
+          width: max-content;
+          flex-direction: row;
+          justify-content: flex-start;
+
+          input {
+            width: 60%;
+          }
+
+          .btn {
+            width: max-content;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 840px) {
+  .footer {
+    padding: 5rem 0;
+    .secContent {
+      .footerCard {
+        flex-direction: row;
+        .footerLinks {
+          grid-template-columns: repeat(3, 1fr);
+          padding-bottom: 1rem;
+        }
+
+        // 版权区域
+        .footerDiv {
+          flex-direction: row;
+          justify-content: space-between;
+
+          small {
+            font-size: 12px;
+            color: var(--whiteColor);
+          }
+        }
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .footer {
+    .secContent {
+      .footerCard {
+        padding: 3rem 1rem;
+
+        .footerIntro {
+          .footerParagraph {
+            font-size: 15px;
+            color: var(--textColor);
+          }
+
+          .footerSocials {
+            column-gap: 0.5rem;
+            .icon {
+              color: var(--textColor);
+              font-size: 25px;
+
+              &:hover {
+                color: var(--PrimaryColor);
+              }
+            }
+          }
+        }
+
+        .footerLinks {
+          .linkGroup {
+            .footerList {
+              font-size: 16px;
+              padding: 5px 0;
+            }
+          }
         }
       }
     }
