--- a/src/Components/Main/main.scss
+++ b/src/Components/Main/main.scss
@@ -21,6 +21,10 @@
   width: 100%;
 
   .secTitle {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
     .title {
       position: relative;
       width: max-content;
@@ -38,6 +42,12 @@
         height: 5px;
         z-index: -1;
       }
+    }
+
+    .btn {
+      height: max-content;
+      color: var(--whiteColor);
+      font-weight: 500;
     }
   }
 
