--- a/src/Components/Navbar/navbar.scss
+++ b/src/Components/Navbar/navbar.scss
@@ -26,6 +26,7 @@
   padding: 1rem;
   z-index: 1000;
   box-shadow: 0 2px 4px rgba(2, 15, 29, 0.904);
+  height: 4rem;
 
   .logo {
     color: var(--blackColor);
@@ -38,6 +39,14 @@
       font-size: 25px;
       color: var(--PrimaryColor);
       transform: translateY(5px);
+    }
+  }
+
+  .navItem {
+    .navLink {
+      .icon {
+        font-size: 25px;
+      }
     }
   }
 
@@ -75,6 +84,8 @@
           padding: 0.5rem 0;
 
           .navLink {
+            display: flex;
+            align-items: center;
             color: var(--textColor);
             font-size: 0.9rem;
             font-weight: 600;
@@ -170,7 +181,7 @@
     .navBar {
       .navLists {
         .navItem {
-          padding: 0 0.7rem;
+          padding: 0 0.3rem;
         }
       }
     }
