--- a/src/pages/Index/index.scss
+++ b/src/pages/Index/index.scss
@@ -1,12 +1,9 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"); */
-
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;900&family=Poppins:wght@300;400;500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Noto Sans SC", sans-serif;
   font-family: "Poppins", sans-serif;
 }
 
@@ -101,12 +98,14 @@ body {
     width: 80% !important;
     margin: auto !important;
   }
+
   .section {
     padding: 6rem 0 4rem;
   }
 }
+
 @media screen and (min-width: 2560px) {
   body {
     zoom: 1.7;
   }
-} /*# sourceMappingURL=index.css.map */
+}
