--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -136,11 +136,13 @@
 }
 
 @keyframes move {
-  0%, 49.99% {
+  0%,
+  49.99% {
     opacity: 0;
     z-index: 1;
   }
-  50%, 100% {
+  50%,
+  100% {
     opacity: 1;
     z-index: 5;
   }
@@ -224,4 +226,11 @@
 
 .loginContainer.active .toggle-right {
   transform: translateX(200%);
-}/*# sourceMappingURL=Login.css.map */
+}
+
+/* 输入框错误信息 */
+.nameError {
+  margin: 0;
+  height: 10px;
+  font-size: 10px;
+}
