--- a/src/Components/Home/home.css
+++ b/src/Components/Home/home.css
@@ -82,11 +82,41 @@
   padding-bottom: 10px;
 }
 .home .homeContent .cardDiv .input {
+  position: relative;
   height: 40px;
   padding: 0 1rem;
   background: var(--inputColor);
   border-radius: 3rem;
   /*横条样式*/
+}
+.home .homeContent .cardDiv .input .stayInput {
+  position: absolute;
+  padding: 1rem;
+  top: 2.5rem;
+  left: 0;
+  width: 100%;
+  height: 7rem;
+  background-color: var(--cardBG);
+  border-radius: 10px;
+}
+.home .homeContent .cardDiv .input .stayInput .inputItem {
+  justify-content: space-between;
+}
+.home .homeContent .cardDiv .input .stayInput .inputItem .text {
+  color: var(--blackColor);
+}
+.home .homeContent .cardDiv .input .stayInput .inputItem .count {
+  border: 1px solid var(--PrimaryColor);
+  font-size: 1.25rem;
+  color: var(--blackColor);
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+}
+.home .homeContent .cardDiv .input .stayInput .inputItem .count button {
+  border: none;
+  background-color: var(--cardBG);
+  font-size: 1.25rem;
+  width: 1.25rem;
 }
 .home .homeContent .cardDiv .input input {
   background: none;
