--- a/src/Components/Home/home.scss
+++ b/src/Components/Home/home.scss
@@ -99,10 +99,46 @@
       }
 
       .input {
+        position: relative;
         height: 40px;
         padding: 0 1rem;
         background: var(--inputColor);
         border-radius: 3rem;
+
+        // 设置stayInput样式
+        .stayInput {
+          position: absolute;
+          padding: 1rem;
+          top: 2.5rem;
+          left: 0;
+          width: 100%;
+          height: 7rem;
+          background-color: var(--cardBG);
+          border-radius: 10px;
+
+          .inputItem {
+            justify-content: space-between;
+
+            .text {
+              color: var(--blackColor);
+            }
+
+            .count {
+              border: 1px solid var(--PrimaryColor);
+              font-size: 1.25rem;
+              color: var(--blackColor);
+              button {
+                // text-decoration: none;
+                // outline: none;
+                border: none;
+                background-color: var(--cardBG);
+                font-size: 1.25rem;
+                width: 1.25rem;
+              }
+              column-gap: 0.5rem;
+            }
+          }
+        }
 
         input {
           background: none;
