--- a/src/pages/Index/index.css
+++ b/src/pages/Index/index.css
@@ -1,12 +1,8 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"); */
-
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;900&family=Poppins:wght@300;400;500;600;700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Noto Sans SC", sans-serif;
   font-family: "Poppins", sans-serif;
 }
 
@@ -109,4 +105,4 @@ body {
   body {
     zoom: 1.7;
   }
-} /*# sourceMappingURL=index.css.map */
+}/*# sourceMappingURL=index.css.map */
