--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -136,13 +136,11 @@
 }
 
 @keyframes move {
-  0%,
-  49.99% {
+  0%, 49.99% {
     opacity: 0;
     z-index: 1;
   }
-  50%,
-  100% {
+  50%, 100% {
     opacity: 1;
     z-index: 5;
   }
@@ -226,11 +224,4 @@
 
 .loginContainer.active .toggle-right {
   transform: translateX(200%);
-}
-
-/* 输入框错误信息 */
-.nameError {
-  margin: 0;
-  height: 10px;
-  font-size: 10px;
-}
+}/*# sourceMappingURL=Login.css.map */
