--- a/src/Components/Slider/Slider.scss
+++ b/src/Components/Slider/Slider.scss
@@ -44,10 +44,40 @@
       }
     }
   }
-  .prev {
+  button {
     position: absolute;
-    left: 9rem;
+    padding: 1rem 0.5rem;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 3rem;
+    border: none;
+    outline: none;
+    cursor: pointer;
+
     top: 50%;
     transform: translateY(50%);
+    width: 1.25rem;
+
+    .IconLeft {
+      position: absolute;
+      left: 30%;
+      transform: translateX(-50%);
+      top: 50%;
+      transform: translateY(-50%);
+    }
+    .IconRight {
+      position: absolute;
+      right: 30%;
+      transform: translateX(-50%);
+      top: 50%;
+      transform: translateY(-50%);
+    }
+  }
+  .prev {
+    left: 9rem;
+    border-radius: 0 50% 50% 0;
+  }
+  .next {
+    right: 9rem;
+    border-radius: 50% 0 0 50%;
   }
 }
