--- a/src/Components/Slider/Slider.scss
+++ b/src/Components/Slider/Slider.scss
@@ -31,6 +31,7 @@
 
   ul {
     display: flex;
+    transition: 0.3s ease;
     // transform: translateX(-628.8px);
 
     li {
@@ -40,6 +41,7 @@
       border-radius: 20px;
       padding-bottom: 2rem;
       // transform: translateX(-628.8px); 314.4px
+      cursor: pointer;
 
       img {
         width: 300px;
@@ -49,6 +51,7 @@
       .itemText {
         margin: 0.4rem 0.6rem 0.6rem 0.6rem;
         color: var(--textColor);
+        // box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 
         .itemLocation {
           font-size: 13px;
@@ -57,7 +60,8 @@
         .itemScore {
           width: 1.25rem;
           height: 1.25rem;
-          padding: 0 0.25rem;
+          font-size: 15px;
+          padding: 0.25rem 0.5rem;
           margin-right: 0.5rem;
           border-radius: 10px;
           background-color: var(--SecondaryColor);
@@ -69,80 +73,76 @@
       }
     }
   }
+
+  // 设置两个按钮样式
+  button {
+    position: absolute;
+    padding: 1rem 0.5rem;
+    background-color: rgba(255, 255, 255, 0.5);
+    border-radius: 3rem;
+    border: none;
+    outline: none;
+    cursor: pointer;
+
+    top: 50%;
+    transform: translateY(50%);
+    width: 1.25rem;
+  }
+  .prev {
+    left: 0rem;
+    border-radius: 0 50% 50% 0;
+
+    .IconLeft {
+      position: absolute;
+      left: 20%;
+      transform: translateX(-50%);
+      top: 50%;
+      transform: translateY(-50%);
+    }
+  }
+  .next {
+    right: 0rem;
+    border-radius: 50% 0 0 50%;
+
+    .IconRight {
+      position: absolute;
+      right: 20%;
+      transform: translateX(-50%);
+      top: 50%;
+      transform: translateY(-50%);
+    }
+  }
+
+  .bn632-hover {
+    width: 2rem;
+    font-size: 16px;
+    font-weight: 600;
+    color: #fff;
+    cursor: pointer;
+    text-align: center;
+    border: none;
+    background-size: 100% 100%;
+    border-radius: 50%;
+    moz-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+  }
+
+  .bn632-hover:hover {
+    background-position: 100% 0;
+    moz-transition: all 0.4s ease-in-out;
+    -o-transition: all 0.4s ease-in-out;
+    -webkit-transition: all 0.4s ease-in-out;
+    transition: all 0.4s ease-in-out;
+  }
+
+  .bn632-hover:focus {
+    outline: none;
+  }
+
+  .bn632-hover.bn26 {
+    background-image: var(--gradientColor);
+    // box-shadow: 0 4px 15px 0 rgba(65, 132, 234, 0.75);
+  }
 }
-//   button {
-//     position: absolute;
-//     padding: 1rem 0.5rem;
-//     background-color: rgba(255, 255, 255, 0.5);
-//     border-radius: 3rem;
-//     border: none;
-//     outline: none;
-//     cursor: pointer;
-
-//     top: 50%;
-//     transform: translateY(50%);
-//     width: 1.25rem;
-
-//     .IconLeft {
-//       position: absolute;
-//       left: 30%;
-//       transform: translateX(-50%);
-//       top: 50%;
-//       transform: translateY(-50%);
-//     }
-//     .IconRight {
-//       position: absolute;
-//       right: 30%;
-//       transform: translateX(-50%);
-//       top: 50%;
-//       transform: translateY(-50%);
-//     }
-//   }
-//   .prev {
-//     left: 7.5rem;
-//     border-radius: 0 50% 50% 0;
-//   }
-//   .next {
-//     right: 7.5rem;
-//     border-radius: 50% 0 0 50%;
-//   }
-
-//   .bn632-hover {
-//     width: 2rem;
-//     font-size: 16px;
-//     font-weight: 600;
-//     color: #fff;
-//     cursor: pointer;
-//     text-align: center;
-//     border: none;
-//     background-size: 100% 100%;
-//     border-radius: 50%;
-//     moz-transition: all 0.4s ease-in-out;
-//     -o-transition: all 0.4s ease-in-out;
-//     -webkit-transition: all 0.4s ease-in-out;
-//     transition: all 0.4s ease-in-out;
-//   }
-
-//   .bn632-hover:hover {
-//     background-position: 100% 0;
-//     moz-transition: all 0.4s ease-in-out;
-//     -o-transition: all 0.4s ease-in-out;
-//     -webkit-transition: all 0.4s ease-in-out;
-//     transition: all 0.4s ease-in-out;
-//   }
-
-//   .bn632-hover:focus {
-//     outline: none;
-//   }
-
-//   .bn632-hover.bn26 {
-//     background-image: linear-gradient(
-//       to right,
-//       #25aae1,
-//       #4481eb,
-//       #04befe,
-//       #3f86ed
-//     );
-//     box-shadow: 0 4px 15px 0 rgba(65, 132, 234, 0.75);
-//   }
-// }
