--- a/src/pages/Attraction/Attraction.css
+++ b/src/pages/Attraction/Attraction.css
@@ -1,1 +1,58 @@
-/*# sourceMappingURL=Attraction.css.map */
+:root {
+  --PrimaryColor: hsl(199, 100%, 33%);
+  --SecondaryColor: hsl(187, 85%, 43%);
+  --gradientColor: linear-gradient(
+    to right,
+    hsl(187, 85%, 43%),
+    hsl(199, 100%, 33%)
+  );
+  --whiteColor: hsl(0, 0%, 100%);
+  --blackColor: hsl(201, 33%, 16%);
+  --textColor: hsl(240, 4%, 36%);
+  --whiteColorDeam: hsl(0, 0%, 93%);
+  --greyText: rgb(190, 190, 190);
+  --inputColor: rgb(239, 239, 239);
+  --bodyColor: rgb(240, 240, 246);
+  --cardBG: rgb(225, 225, 235);
+}
+
+.attraction .container {
+  width: 80% !important;
+  margin: auto !important;
+}
+.attraction .section {
+  padding: 1rem 0 4rem;
+}
+.attraction .getCover {
+  border-top: 1px solid #000;
+}
+.attraction .getCover .title {
+  color: var(--textColor);
+  font-weight: 600;
+}
+.attraction .getCover ul {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 1rem;
+  gap: 1.5rem;
+}
+.attraction .getCover ul li {
+  width: 33%;
+  display: flex;
+}
+.attraction .getCover ul li .icon {
+  margin-right: 0.6rem;
+  color: #32cd32;
+}
+.attraction .getCover ul li .coverText h4 {
+  font-weight: 600;
+}
+.attraction .getCover ul li .coverText span {
+  font-size: 14px;
+}
+
+@media screen and (min-width: 500px) {
+  .attraction .home .homeContent .textDiv .homeTitle::after {
+    width: 230px;
+  }
+}/*# sourceMappingURL=Attraction.css.map */
