--- a/src/Components/Slider/Slider.css
+++ b/src/Components/Slider/Slider.css
@@ -54,10 +54,11 @@
 .slider ul li .itemText .itemScore {
   width: 1.25rem;
   height: 1.25rem;
+  color: var(--whiteColor);
   font-size: 15px;
   padding: 0.25rem 0.5rem;
   margin-right: 0.5rem;
-  border-radius: 10px;
+  border-radius: 15px;
   background-color: var(--SecondaryColor);
 }
 .slider ul li .itemText .itemAssess {
