--- a/src/Components/Slider/Slider.scss
+++ b/src/Components/Slider/Slider.scss
@@ -60,10 +60,11 @@
         .itemScore {
           width: 1.25rem;
           height: 1.25rem;
+          color: var(--whiteColor);
           font-size: 15px;
           padding: 0.25rem 0.5rem;
           margin-right: 0.5rem;
-          border-radius: 10px;
+          border-radius: 15px;
           background-color: var(--SecondaryColor);
         }
 
