--- a/src/Components/Tabs/Tabs.scss
+++ b/src/Components/Tabs/Tabs.scss
@@ -93,3 +93,43 @@
     padding: 2rem 0 4rem;
   }
 }
+
+@media screen and (max-width: 1240px) {
+  .tabs {
+    .tab-content {
+      .grid {
+        grid-template-columns: repeat(4, 1fr);
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 730px) {
+  .tabs {
+    .tab-content {
+      .grid {
+        grid-template-columns: repeat(3, 1fr);
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .tabs {
+    .tabName {
+      .tab {
+        height: max-content;
+        padding: 6px 10px;
+      }
+    }
+    .tabItem {
+      height: 330px;
+      overflow: auto;
+      .tab-content {
+        .grid {
+          grid-template-columns: repeat(2, 1fr);
+        }
+      }
+    }
+  }
+}
