--- a/src/Components/Destinations/Destinations.scss
+++ b/src/Components/Destinations/Destinations.scss
@@ -78,3 +78,11 @@
     }
   }
 }
+
+@media screen and (max-width: 660px) {
+  .destinations {
+    .secContent {
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+}
