--- a/src/pages/Flight/Flight.scss
+++ b/src/pages/Flight/Flight.scss
@@ -16,190 +16,196 @@
   --cardBG: rgb(225, 225, 235);
 }
 
-.home {
-  position: relative;
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-  //   height: 500px;
-
-  // .overlay {
-  //   position: absolute;
-  //   width: 100%;
-  //   height: 100%;
-  //   background: rgb(47, 106, 127);
-  //   top: 0;
-  //   bottom: 0;
-  //   z-index: 1;
-  //   mix-blend-mode: hard-light;
-  // }
-  video {
-    position: absolute;
-    height: 100%;
+.flight {
+  .home {
+    position: relative;
     width: 100%;
-    top: 0;
-    bottom: 0;
-    object-fit: cover;
-  }
-
-  .homeContent {
-    width: 100%;
-    // 设置高度，把父盒子也撑起来了
-    height: max-content;
-    padding: 8rem 1.5rem 3rem;
-    row-gap: 3rem;
     display: flex;
-    flex-direction: column;
-    align-items: stretch;
+    justify-content: center;
+    align-items: center;
     margin: auto;
-    color: var(--whiteColor);
-    z-index: 2;
 
-    .textDiv {
-      padding: 2rem 0;
-
-      .smallText {
-        font-size: 13px;
-        text-transform: uppercase;
-      }
-
-      .homeTitle {
-        position: relative;
-        font-size: 1.8rem;
-      }
+    // .overlay {
+    //   position: absolute;
+    //   width: 100%;
+    //   height: 100%;
+    //   background: rgb(47, 106, 127);
+    //   top: 0;
+    //   bottom: 0;
+    //   z-index: 1;
+    //   mix-blend-mode: hard-light;
+    // }
+    video {
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      top: 0;
+      bottom: 0;
+      object-fit: cover;
     }
 
-    //
-    .cardDiv {
-      position: relative;
-      padding: 2rem 1rem;
-      background: var(--whiteColor);
-      border-radius: 10px;
-      gap: 1rem;
+    .homeContent {
+      width: 100%;
+      // 设置高度，把父盒子也撑起来了
+      height: max-content;
+      padding: 8rem 1.5rem 3rem;
+      row-gap: 3rem;
+      display: flex;
+      flex-direction: column;
+      align-items: stretch;
+      margin: auto;
+      color: var(--whiteColor);
+      z-index: 2;
 
-      label {
-        display: block;
-        color: var(--textColor);
-        padding-bottom: 10px;
-        font-size: 13px;
-        font-weight: 500;
-      }
+      .textDiv {
+        padding: 2rem 0;
 
-      .label_total {
-        justify-content: space-between;
-        align-items: center;
+        .smallText {
+          font-size: 13px;
+          text-transform: uppercase;
+        }
 
-        .total {
-          color: var(--textColor);
-          font-size: 18px;
-          padding-bottom: 10px;
+        .homeTitle {
+          position: relative;
+          font-size: 1.8rem;
+
+          word-wrap: break-word;
+          text-overflow: ellipsis;
+
+          //   font-weight: 800;
         }
       }
 
-      .input {
+      //
+      .cardDiv {
         position: relative;
-        height: 40px;
-        padding: 0 1rem;
-        background: var(--inputColor);
-        border-radius: 3rem;
+        padding: 2rem 1rem;
+        background: var(--whiteColor);
+        border-radius: 10px;
+        gap: 1rem;
 
-        // 设置stayInput样式
-        .stayInput {
-          position: absolute;
-          padding: 1rem;
-          top: 2.5rem;
-          left: 0;
-          width: 100%;
-          height: 7rem;
-          background-color: var(--cardBG);
-          border-radius: 10px;
+        label {
+          display: block;
+          color: var(--textColor);
+          padding-bottom: 10px;
+          font-size: 13px;
+          font-weight: 500;
+        }
 
-          .inputItem {
-            justify-content: space-between;
+        .label_total {
+          justify-content: space-between;
+          align-items: center;
 
-            .text {
-              color: var(--blackColor);
-            }
-
-            .count {
-              border: 1px solid var(--PrimaryColor);
-              font-size: 1.1rem;
-              color: var(--blackColor);
-              button {
-                border: none;
-                background-color: var(--cardBG);
-                font-size: 1.25rem;
-                width: 1.25rem;
-              }
-              column-gap: 0.5rem;
-            }
+          .total {
+            color: var(--textColor);
+            font-size: 18px;
+            padding-bottom: 10px;
           }
         }
 
-        input {
-          background: none;
-          border: none;
-          outline: none;
-          width: 100%;
-          font-size: 13px;
-          font-weight: 500;
-          &::placeholder {
+        .input {
+          position: relative;
+          height: 40px;
+          padding: 0 1rem;
+          background: var(--inputColor);
+          border-radius: 3rem;
+
+          // 设置stayInput样式
+          .stayInput {
+            position: absolute;
+            padding: 1rem;
+            top: 2.5rem;
+            left: 0;
+            width: 100%;
+            height: 7rem;
+            background-color: var(--cardBG);
+            border-radius: 10px;
+
+            .inputItem {
+              justify-content: space-between;
+
+              .text {
+                color: var(--blackColor);
+              }
+
+              .count {
+                border: 1px solid var(--PrimaryColor);
+                font-size: 1.1rem;
+                color: var(--blackColor);
+                button {
+                  border: none;
+                  background-color: var(--cardBG);
+                  font-size: 1.25rem;
+                  width: 1.25rem;
+                }
+                column-gap: 0.5rem;
+              }
+            }
+          }
+
+          input {
+            background: none;
+            border: none;
+            outline: none;
+            width: 100%;
+            font-size: 13px;
+            font-weight: 500;
+            &::placeholder {
+              font-size: 13px;
+            }
+          }
+
+          .icon {
+            font-size: 18px;
+            color: var(--PrimaryColor) !important;
+            margin-left: 10px;
+          }
+          /*横条样式*/
+          input[type="range"] {
+            background: blue;
+          }
+        }
+
+        .searchOptions {
+          position: absolute;
+          background: var(--gradientColor);
+          width: max-content;
+          bottom: -0.7rem;
+          column-gap: 0.8rem;
+          padding: 5px 1rem;
+          border-radius: 3rem;
+          left: 50%;
+          transform: translateX(-50%);
+          justify-content: center;
+          cursor: pointer;
+
+          &:hover {
+            background: var(--PrimaryColor);
+          }
+
+          .icon {
+            font-size: 18px;
+          }
+
+          span {
             font-size: 13px;
           }
         }
-
-        .icon {
-          font-size: 18px;
-          color: var(--PrimaryColor) !important;
-          margin-left: 10px;
-        }
-        /*横条样式*/
-        input[type="range"] {
-          background: blue;
-        }
       }
 
-      .searchOptions {
-        position: absolute;
-        background: var(--gradientColor);
-        width: max-content;
-        bottom: -0.7rem;
-        column-gap: 0.8rem;
-        padding: 5px 1rem;
-        border-radius: 3rem;
-        left: 50%;
-        transform: translateX(-50%);
-        justify-content: center;
-        cursor: pointer;
-
-        &:hover {
-          background: var(--PrimaryColor);
-        }
+      .homeFooterIcons {
+        width: 100%;
+        justify-content: space-between;
 
         .icon {
-          font-size: 18px;
-        }
+          font-size: 20px;
+          margin: 0 5px;
+          color: var(--whiteColor);
+          font-weight: 600;
 
-        span {
-          font-size: 13px;
-        }
-      }
-    }
-
-    .homeFooterIcons {
-      width: 100%;
-      justify-content: space-between;
-
-      .icon {
-        font-size: 20px;
-        margin: 0 5px;
-        color: var(--whiteColor);
-        font-weight: 600;
-
-        &:hover {
-          color: var(--PrimaryColor);
+          &:hover {
+            color: var(--PrimaryColor);
+          }
         }
       }
     }
@@ -219,6 +225,9 @@
           position: relative;
           font-size: 2.3rem;
           width: max-content;
+
+          word-wrap: break-word;
+          text-overflow: ellipsis;
 
           &::after {
             position: absolute;
